fix: fix code after inspection
(cherry picked from commit d1795e6a7e0c1638356f75a8bad466b49eb081b0)